# earthrover-1

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  vercel.json
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: rover.py  world.py  ws.py
backend/app/models/: __init__.py  mission.py
backend/app/simulation/: engine.py  lidar.py  occupancy_grid.py  rover.py  sensors.py  world.py
backend/tests/: test_engine.py  test_models.py  test_rover.py
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: RoverCanvas.tsx
frontend/src/pages/: RoverDashboard.tsx
frontend/src/services/: api.ts  telemetrySocket.test.ts  telemetrySocket.ts
